fix crushed controller on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -321,7 +321,7 @@ h1 {
 
     #button_and_input {
         left: 2%;
-        top: 16%;
+        top: 8%;
     }
 
     #favorite_area {
